<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.udacity.wertonguimaraes.tourguide.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo" />

        <TextView
            style="@style/MenuTextStyle"
            android:text="@string/app_name"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:paddingBottom="15dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/restaurant_button"
                style="@style/MenuButtonStyle"
                android:background="@drawable/restaurant"/>

            <TextView
                style="@style/MenuTextStyle"
                android:text="@string/restaurants"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/touristic_point_button"
                style="@style/MenuButtonStyle"
                android:background="@drawable/touristic_point" />

            <TextView
                style="@style/MenuTextStyle"
                android:text="@string/touristic_points" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/shop_button"
                style="@style/MenuButtonStyle"
                android:background="@drawable/shop" />

            <TextView
                style="@style/MenuTextStyle"
                android:text="@string/shops"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/bar_button"
                style="@style/MenuButtonStyle"
                android:background="@drawable/bar" />

            <TextView
                style="@style/MenuTextStyle"
                android:text="@string/bars" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/hotel_button"
                style="@style/MenuButtonStyle"
                android:background="@drawable/hotel" />

            <TextView
                style="@style/MenuTextStyle"
                android:text="@string/hotels" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>